# fantastic-enigma

./: .gitignore  AGENTS.md  PLAN.md  README.md  completed.md  pyproject.toml
.github/workflows/: ci.yml
addons/WowAuctionTracker/: README.md  WowAuctionTracker.lua  WowAuctionTracker.toc
config/: items.example.yaml
docs/: architecture.md
scripts/: start-local.sh
src/wow_auction_tracker/: __init__.py  auction.py  blizzard.py  cli.py  config.py  dashboard.py  db.py  pipeline.py  scheduler.py
src/wow_auction_tracker/auction/: __init__.py  snapshots.py
src/wow_auction_tracker/clients/: blizzard.py
src/wow_auction_tracker/features/: market_data.py  snapshots.py
src/wow_auction_tracker/features/backtesting/: __init__.py  engine.py
src/wow_auction_tracker/features/crafting/: __init__.py  opportunities.py
src/wow_auction_tracker/features/dashboard/: __init__.py  item_page.py  server.py
src/wow_auction_tracker/features/lifecycle/: __init__.py  observations.py
src/wow_auction_tracker/features/metadata/: __init__.py  items.py
src/wow_auction_tracker/features/opportunities/: __init__.py  tracking.py
src/wow_auction_tracker/features/player/: __init__.py  addon_import.py
src/wow_auction_tracker/features/tiers/: __init__.py
src/wow_auction_tracker/storage/: __init__.py  db.py
tests/: test_auction.py  test_backtesting.py  test_cli.py  test_config.py  test_crafting.py  test_dashboard.py  test_db.py  test_lifecycle.py  test_metadata.py  test_pipeline.py  test_recommendations.py  test_scheduler.py  test_sellthrough.py  test_start_local.py  test_tiers.py
(+5 files in other folders)
