[project]
name = "wow-auction-tracker"
version = "0.1.0"
description = "Local World of Warcraft auction snapshot tracker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.15.20",
]

[project.scripts]
wow-auctions = "wow_auction_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wow_auction_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
